@@ -3,6 +3,9 @@ Changelog
 
 8.8-dev - (unreleased)
 ----------------------
+* Feature: added an Auto relation from Assessment and AssessmentPart to a
+  Data portal_type if there is a DavizVisualization or EEAFigure in the middle
+  [ichimdav refs #21173]
 
 8.7 - (2015-01-22)
 ------------------
